# ds_ai_ml_models

./: .gitignore  pyproject.toml  requirements.txt
alm_associative_linear_memory/: model.py
computer_vision/: 01. CV. Images as Numerical Data.ipynb  02. CV. Masking.ipynb  08. CV. Mnist_ basic and convnets.ipynb  10_CV_Improving_models.ipynb  11. CV. Semantic_Segmentation.ipynb
gradient_descent/: Py1_A01782876.py  ex1data1.txt
hopfield_network/: data.py  digit_classifier.py
k-means/: ex7data2.txt  k-means.py
k-means/k-means-image-compression/: k-means-image-compression.py
kalman_filter/: User1_Pre2.csv  enkf_1.py  enkf_1_suavizado.py
knn/: KNN.ipynb  KNNTest.txt  KNNTraining.txt
knn/hw1_heart_esteban/: create_test_training.py  homework.ipynb  test.txt  training.txt
logistic_regression/: logistic_regression.ipynb  regressionTest.txt  regressionTraining.txt
logistic_regression/esteban_logistice_regression/: homework.ipynb  preprocessing.py
logistic_regression/victor_logistic_regression/: logistic.py  logistic_matrix.py  test.csv  training.csv
naive_bayes/esteban_naive_bayes_activity/: A01782876_nb.ipynb
neural_networks/cnn/: Project_Traffic_sign_classifier.ipynb  benchmark_macos.py
neural_networks/esteban_exam/: 20newsgroups_nn.ipynb  label_map.json
perceptron_classification/: model.py  test_data.csv  training_data.csv
reinforcement_learning/: A_1_Aproximación_Valor_Esperado.ipynb  goat_car_21_blackjack.py  slot_probs_nunning_avg.py  stochastic_processes.py
signals_cleaning_fourier/: cleaning_signals.py
(+25 files in other folders)
