[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.5",
    "minigrid>=3.0.0",
    "nbformat>=5.10.4",
    "nltk==3.7",
    "numpy>=2.3.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "textblob>=0.17.1",
    "wordcloud>=1.9.4",
]
